# mac_libhybris

./: README.md  build_libhybris.sh
android-headers.github/: Makefile  android-headers.pc  git-revisions.txt
android-headers.github/android/: Makefile  android  android-config.h  android-headers.pc  android-version.h  cutils  git-revisions.txt  hardware  hardware_legacy  libnfc-nxp  linux  log  private  sync  system
android-headers.github/cutils/: logd.h
android-headers.github/hardware/: hwcomposer.h  hwcomposer_defs.h  rk_fh.h
android-headers.ubuntu/: android-headers.pc  git-revisions.txt
android-headers.ubuntu/android/: Makefile  android  android-config.h  android-headers.pc  android-version.h  cutils  git-revisions.txt  hardware  hardware_legacy  libnfc-nxp  libon2  librkvpu  linux  log  private  sync  system
android-headers.ubuntu/cutils/: log.h
android-headers.ubuntu/hardware/: hwcomposer_defs.h
android-headers.ubuntu/libon2/: vpu_global.h  vpu_mem_pool.h
android-headers.ubuntu/system/: audio.h
libhybris.vpu.rk312x_5.1.1/debian/: changelog
libhybris.vpu.rk312x_5.1.1/hybris/: Makefile.am  configure.ac
libhybris.vpu.rk312x_5.1.1/hybris/egl/: Makefile.am
libhybris.vpu.rk312x_5.1.1/hybris/media/: media.c
libhybris.vpu.rk312x_5.1.1/hybris/tests/: Makefile.am  (+1 more)
libhybris.vpu.rk312x_5.1.1/utils/: extract-headers.sh
libhybris.vpu.rk3188_4.4.2/hybris/: configure.ac
libhybris.vpu.rk3288_4.4.2/utils/: extract-headers.sh
libhybris.vpu.rk3288_4.4.2_rkpatch/hybris/: Makefile.am
libhybris.vpu.rk3288_4.4.2_rkpatch/hybris/vpu/: Makefile.am
(+10 files in other folders)
